--- a/west.yml
+++ b/west.yml
@@ -1,13 +1,9 @@
 manifest:
-  remotes:
-    - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
-    - name: petejohanson
-      url-base: https://github.com/petejohanson
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      url: https://github.com/petejohanson/zmk
+      revision: feat/pointers-move-scroll
       import: app/west.yml
+      clone-depth: 1
   self:
     path: config
