--- a/boards/arm/zaphod/zaphod_defconfig
+++ b/boards/arm/zaphod/zaphod_defconfig
@@ -25,3 +25,10 @@ CONFIG_SETTINGS_NVS=y
 CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
+
+# Custom
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=2
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
+CONFIG_ZMK_MOUSE=y
