disable screen for now
no hardware yet

--- a/boards/arm/zaphod/zaphod_defconfig
+++ b/boards/arm/zaphod/zaphod_defconfig
@@ -12,7 +12,7 @@ CONFIG_GPIO=y
 
 CONFIG_ZMK_SLEEP=y
 
-CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=n
 CONFIG_LV_USE_THEME_MONO=y
 CONFIG_LV_COLOR_CHROMA_KEY_HEX=0x00FF00
 
